[package]
name = "mech-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.0"
bevy_asset_loader = "0.17.0"
bevy_rapier3d = "0.22.0"
leafwing-input-manager = "0.10.0"
